Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     program -> function
Rule 3     program -> function program
Rule 4     block -> command
Rule 5     block -> command block
Rule 6     command -> list_vars ATRIB list_exps
Rule 7     command -> call_function
Rule 8     command -> rotulo
Rule 9     command -> BREAK
Rule 10    command -> DO block END
Rule 11    command -> struct_while
Rule 12    command -> struct_repeat
Rule 13    command -> if
Rule 14    command -> struct_for
Rule 15    command -> struct_for_in
Rule 16    command -> LOCAL list_vars ATRIB list_exps
Rule 17    command -> command_ret
Rule 18    command_ret -> RETURN SEMICOLON
Rule 19    command_ret -> RETURN list_exps
Rule 20    command_ret -> RETURN list_exps SEMICOLON
Rule 21    rotulo -> DUALCOLON NAME DUALCOLON
Rule 22    name_function -> NAME
Rule 23    name_function -> NAME COLON NAME
Rule 24    list_vars -> var
Rule 25    list_vars -> var COMMA list_vars
Rule 26    var -> NAME
Rule 27    var -> prefix_exp LCOLCH exp RCOLCH
Rule 28    prefix_exp -> var
Rule 29    prefix_exp -> call_function
Rule 30    list_names -> list_names COMMA NAME
Rule 31    list_names -> NAME
Rule 32    list_exps -> exp COMMA list_exps
Rule 33    list_exps -> exp
Rule 34    exp -> NIL
Rule 35    exp -> FALSE
Rule 36    exp -> TRUE
Rule 37    exp -> NUMBER
Rule 38    exp -> STRING
Rule 39    exp -> VARARGS
Rule 40    exp -> def_function
Rule 41    exp -> prefix_exp
Rule 42    exp -> TAG exp
Rule 43    exp -> MINUS exp
Rule 44    exp -> NOT exp
Rule 45    exp -> exp PLUS exp
Rule 46    exp -> exp MINUS exp
Rule 47    exp -> exp TIMES exp
Rule 48    exp -> exp DIVIDE exp
Rule 49    exp -> exp EXPO exp
Rule 50    exp -> exp PERCENTUAL exp
Rule 51    exp -> exp CONCAT exp
Rule 52    exp -> exp LT exp
Rule 53    exp -> exp LTEQUALS exp
Rule 54    exp -> exp GT exp
Rule 55    exp -> exp GTEQUALS exp
Rule 56    exp -> exp EQUALS exp
Rule 57    exp -> exp DIF exp
Rule 58    exp -> exp AND exp
Rule 59    exp -> exp OR exp
Rule 60    call_function -> prefix_exp args
Rule 61    args -> LPAREN list_exps RPAREN
Rule 62    args -> LPAREN RPAREN
Rule 63    def_function -> function
Rule 64    body_function -> LPAREN list_pars RPAREN block END
Rule 65    list_pars -> list_names
Rule 66    list_pars -> list_names COMMA VARARGS
Rule 67    list_pars -> VARARGS
Rule 68    function -> FUNCTION name_function body_function
Rule 69    if -> IF exp THEN block END
Rule 70    if -> IF exp THEN block else1
Rule 71    if -> IF exp THEN block else_if else1
Rule 72    else_if -> ELSEIF exp THEN block
Rule 73    else_if -> ELSEIF exp THEN block else_if
Rule 74    else1 -> ELSE block END
Rule 75    struct_while -> WHILE exp DO block END
Rule 76    struct_for -> FOR NAME ATRIB exp COMMA exp DO block END
Rule 77    struct_for -> FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
Rule 78    struct_for_in -> FOR list_names IN list_exps DO block END
Rule 79    struct_repeat -> REPEAT block UNTIL exp

Terminals, with rules where they appear

AND                  : 58
ATRIB                : 6 16 76 77
BREAK                : 9
COLON                : 23
COMMA                : 25 30 32 66 76 77 77
CONCAT               : 51
DIF                  : 57
DIVIDE               : 48
DO                   : 10 75 76 77 78
DUALCOLON            : 21 21
ELSE                 : 74
ELSEIF               : 72 73
END                  : 10 64 69 74 75 76 77 78
EQUALS               : 56
EXPO                 : 49
FALSE                : 35
FOR                  : 76 77 78
FUNCTION             : 68
GT                   : 54
GTEQUALS             : 55
IF                   : 69 70 71
IN                   : 78
LCOLCH               : 27
LOCAL                : 16
LPAREN               : 61 62 64
LT                   : 52
LTEQUALS             : 53
MINUS                : 43 46
NAME                 : 21 22 23 23 26 30 31 76 77
NIL                  : 34
NOT                  : 44
NUMBER               : 37
OR                   : 59
PERCENTUAL           : 50
PLUS                 : 45
RCOLCH               : 27
REPEAT               : 79
RETURN               : 18 19 20
RPAREN               : 61 62 64
SEMICOLON            : 18 20
STRING               : 38
TAG                  : 42
THEN                 : 69 70 71 72 73
TIMES                : 47
TRUE                 : 36
UNTIL                : 79
VARARGS              : 39 66 67
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

args                 : 60
block                : 1 5 10 64 69 70 71 72 73 74 75 76 77 78 79
body_function        : 68
call_function        : 7 29
command              : 4 5
command_ret          : 17
def_function         : 40
else1                : 70 71
else_if              : 71 73
exp                  : 27 32 33 42 43 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 69 70 71 72 73 75 76 76 77 77 77 79
function             : 2 3 63
if                   : 13
list_exps            : 6 16 19 20 32 61 78
list_names           : 30 65 66 78
list_pars            : 64
list_vars            : 6 16 25
name_function        : 68
prefix_exp           : 27 41 60
program              : 3 0
rotulo               : 8
struct_for           : 14
struct_for_in        : 15
struct_repeat        : 12
struct_while         : 11
var                  : 24 25 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) program -> . function
    (3) program -> . function program
    (4) block -> . command
    (5) block -> . command block
    (68) function -> . FUNCTION name_function body_function
    (6) command -> . list_vars ATRIB list_exps
    (7) command -> . call_function
    (8) command -> . rotulo
    (9) command -> . BREAK
    (10) command -> . DO block END
    (11) command -> . struct_while
    (12) command -> . struct_repeat
    (13) command -> . if
    (14) command -> . struct_for
    (15) command -> . struct_for_in
    (16) command -> . LOCAL list_vars ATRIB list_exps
    (17) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (60) call_function -> . prefix_exp args
    (21) rotulo -> . DUALCOLON NAME DUALCOLON
    (75) struct_while -> . WHILE exp DO block END
    (79) struct_repeat -> . REPEAT block UNTIL exp
    (69) if -> . IF exp THEN block END
    (70) if -> . IF exp THEN block else1
    (71) if -> . IF exp THEN block else_if else1
    (76) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (77) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (78) struct_for_in -> . FOR list_names IN list_exps DO block END
    (18) command_ret -> . RETURN SEMICOLON
    (19) command_ret -> . RETURN list_exps
    (20) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function

    FUNCTION        shift and go to state 5
    BREAK           shift and go to state 9
    DO              shift and go to state 10
    LOCAL           shift and go to state 16
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 22
    REPEAT          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    NAME            shift and go to state 21

    program                        shift and go to state 1
    block                          shift and go to state 2
    function                       shift and go to state 3
    command                        shift and go to state 4
    list_vars                      shift and go to state 6
    call_function                  shift and go to state 7
    rotulo                         shift and go to state 8
    struct_while                   shift and go to state 11
    struct_repeat                  shift and go to state 12
    if                             shift and go to state 13
    struct_for                     shift and go to state 14
    struct_for_in                  shift and go to state 15
    command_ret                    shift and go to state 17
    var                            shift and go to state 18
    prefix_exp                     shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) program -> function .
    (3) program -> function . program
    (1) program -> . block
    (2) program -> . function
    (3) program -> . function program
    (4) block -> . command
    (5) block -> . command block
    (68) function -> . FUNCTION name_function body_function
    (6) command -> . list_vars ATRIB list_exps
    (7) command -> . call_function
    (8) command -> . rotulo
    (9) command -> . BREAK
    (10) command -> . DO block END
    (11) command -> . struct_while
    (12) command -> . struct_repeat
    (13) command -> . if
    (14) command -> . struct_for
    (15) command -> . struct_for_in
    (16) command -> . LOCAL list_vars ATRIB list_exps
    (17) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (60) call_function -> . prefix_exp args
    (21) rotulo -> . DUALCOLON NAME DUALCOLON
    (75) struct_while -> . WHILE exp DO block END
    (79) struct_repeat -> . REPEAT block UNTIL exp
    (69) if -> . IF exp THEN block END
    (70) if -> . IF exp THEN block else1
    (71) if -> . IF exp THEN block else_if else1
    (76) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (77) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (78) struct_for_in -> . FOR list_names IN list_exps DO block END
    (18) command_ret -> . RETURN SEMICOLON
    (19) command_ret -> . RETURN list_exps
    (20) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function

    $end            reduce using rule 2 (program -> function .)
    FUNCTION        shift and go to state 5
    BREAK           shift and go to state 9
    DO              shift and go to state 10
    LOCAL           shift and go to state 16
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 22
    REPEAT          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    NAME            shift and go to state 21

    function                       shift and go to state 3
    program                        shift and go to state 27
    block                          shift and go to state 2
    command                        shift and go to state 4
    list_vars                      shift and go to state 6
    call_function                  shift and go to state 7
    rotulo                         shift and go to state 8
    struct_while                   shift and go to state 11
    struct_repeat                  shift and go to state 12
    if                             shift and go to state 13
    struct_for                     shift and go to state 14
    struct_for_in                  shift and go to state 15
    command_ret                    shift and go to state 17
    var                            shift and go to state 18
    prefix_exp                     shift and go to state 19

state 4

    (4) block -> command .
    (5) block -> command . block
    (4) block -> . command
    (5) block -> . command block
    (6) command -> . list_vars ATRIB list_exps
    (7) command -> . call_function
    (8) command -> . rotulo
    (9) command -> . BREAK
    (10) command -> . DO block END
    (11) command -> . struct_while
    (12) command -> . struct_repeat
    (13) command -> . if
    (14) command -> . struct_for
    (15) command -> . struct_for_in
    (16) command -> . LOCAL list_vars ATRIB list_exps
    (17) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (60) call_function -> . prefix_exp args
    (21) rotulo -> . DUALCOLON NAME DUALCOLON
    (75) struct_while -> . WHILE exp DO block END
    (79) struct_repeat -> . REPEAT block UNTIL exp
    (69) if -> . IF exp THEN block END
    (70) if -> . IF exp THEN block else1
    (71) if -> . IF exp THEN block else_if else1
    (76) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (77) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (78) struct_for_in -> . FOR list_names IN list_exps DO block END
    (18) command_ret -> . RETURN SEMICOLON
    (19) command_ret -> . RETURN list_exps
    (20) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function

    $end            reduce using rule 4 (block -> command .)
    END             reduce using rule 4 (block -> command .)
    UNTIL           reduce using rule 4 (block -> command .)
    ELSE            reduce using rule 4 (block -> command .)
    ELSEIF          reduce using rule 4 (block -> command .)
    BREAK           shift and go to state 9
    DO              shift and go to state 10
    LOCAL           shift and go to state 16
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 22
    REPEAT          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    NAME            shift and go to state 21

    command                        shift and go to state 4
    block                          shift and go to state 28
    list_vars                      shift and go to state 6
    call_function                  shift and go to state 7
    rotulo                         shift and go to state 8
    struct_while                   shift and go to state 11
    struct_repeat                  shift and go to state 12
    if                             shift and go to state 13
    struct_for                     shift and go to state 14
    struct_for_in                  shift and go to state 15
    command_ret                    shift and go to state 17
    var                            shift and go to state 18
    prefix_exp                     shift and go to state 19

state 5

    (68) function -> FUNCTION . name_function body_function
    (22) name_function -> . NAME
    (23) name_function -> . NAME COLON NAME

    NAME            shift and go to state 30

    name_function                  shift and go to state 29

state 6

    (6) command -> list_vars . ATRIB list_exps

    ATRIB           shift and go to state 31


state 7

    (7) command -> call_function .
    (29) prefix_exp -> call_function .

    BREAK           reduce using rule 7 (command -> call_function .)
    DO              reduce using rule 7 (command -> call_function .)
    LOCAL           reduce using rule 7 (command -> call_function .)
    DUALCOLON       reduce using rule 7 (command -> call_function .)
    WHILE           reduce using rule 7 (command -> call_function .)
    REPEAT          reduce using rule 7 (command -> call_function .)
    IF              reduce using rule 7 (command -> call_function .)
    FOR             reduce using rule 7 (command -> call_function .)
    RETURN          reduce using rule 7 (command -> call_function .)
    NAME            reduce using rule 7 (command -> call_function .)
    $end            reduce using rule 7 (command -> call_function .)
    END             reduce using rule 7 (command -> call_function .)
    UNTIL           reduce using rule 7 (command -> call_function .)
    ELSE            reduce using rule 7 (command -> call_function .)
    ELSEIF          reduce using rule 7 (command -> call_function .)
    LCOLCH          reduce using rule 29 (prefix_exp -> call_function .)
    LPAREN          reduce using rule 29 (prefix_exp -> call_function .)


state 8

    (8) command -> rotulo .

    BREAK           reduce using rule 8 (command -> rotulo .)
    DO              reduce using rule 8 (command -> rotulo .)
    LOCAL           reduce using rule 8 (command -> rotulo .)
    DUALCOLON       reduce using rule 8 (command -> rotulo .)
    WHILE           reduce using rule 8 (command -> rotulo .)
    REPEAT          reduce using rule 8 (command -> rotulo .)
    IF              reduce using rule 8 (command -> rotulo .)
    FOR             reduce using rule 8 (command -> rotulo .)
    RETURN          reduce using rule 8 (command -> rotulo .)
    NAME            reduce using rule 8 (command -> rotulo .)
    $end            reduce using rule 8 (command -> rotulo .)
    END             reduce using rule 8 (command -> rotulo .)
    UNTIL           reduce using rule 8 (command -> rotulo .)
    ELSE            reduce using rule 8 (command -> rotulo .)
    ELSEIF          reduce using rule 8 (command -> rotulo .)


state 9

    (9) command -> BREAK .

    BREAK           reduce using rule 9 (command -> BREAK .)
    DO              reduce using rule 9 (command -> BREAK .)
    LOCAL           reduce using rule 9 (command -> BREAK .)
    DUALCOLON       reduce using rule 9 (command -> BREAK .)
    WHILE           reduce using rule 9 (command -> BREAK .)
    REPEAT          reduce using rule 9 (command -> BREAK .)
    IF              reduce using rule 9 (command -> BREAK .)
    FOR             reduce using rule 9 (command -> BREAK .)
    RETURN          reduce using rule 9 (command -> BREAK .)
    NAME            reduce using rule 9 (command -> BREAK .)
    $end            reduce using rule 9 (command -> BREAK .)
    END             reduce using rule 9 (command -> BREAK .)
    UNTIL           reduce using rule 9 (command -> BREAK .)
    ELSE            reduce using rule 9 (command -> BREAK .)
    ELSEIF          reduce using rule 9 (command -> BREAK .)


state 10

    (10) command -> DO . block END
    (4) block -> . command
    (5) block -> . command block
    (6) command -> . list_vars ATRIB list_exps
    (7) command -> . call_function
    (8) command -> . rotulo
    (9) command -> . BREAK
    (10) command -> . DO block END
    (11) command -> . struct_while
    (12) command -> . struct_repeat
    (13) command -> . if
    (14) command -> . struct_for
    (15) command -> . struct_for_in
    (16) command -> . LOCAL list_vars ATRIB list_exps
    (17) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (60) call_function -> . prefix_exp args
    (21) rotulo -> . DUALCOLON NAME DUALCOLON
    (75) struct_while -> . WHILE exp DO block END
    (79) struct_repeat -> . REPEAT block UNTIL exp
    (69) if -> . IF exp THEN block END
    (70) if -> . IF exp THEN block else1
    (71) if -> . IF exp THEN block else_if else1
    (76) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (77) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (78) struct_for_in -> . FOR list_names IN list_exps DO block END
    (18) command_ret -> . RETURN SEMICOLON
    (19) command_ret -> . RETURN list_exps
    (20) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function

    BREAK           shift and go to state 9
    DO              shift and go to state 10
    LOCAL           shift and go to state 16
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 22
    REPEAT          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    NAME            shift and go to state 21

    block                          shift and go to state 32
    command                        shift and go to state 4
    list_vars                      shift and go to state 6
    call_function                  shift and go to state 7
    rotulo                         shift and go to state 8
    struct_while                   shift and go to state 11
    struct_repeat                  shift and go to state 12
    if                             shift and go to state 13
    struct_for                     shift and go to state 14
    struct_for_in                  shift and go to state 15
    command_ret                    shift and go to state 17
    var                            shift and go to state 18
    prefix_exp                     shift and go to state 19

state 11

    (11) command -> struct_while .

    BREAK           reduce using rule 11 (command -> struct_while .)
    DO              reduce using rule 11 (command -> struct_while .)
    LOCAL           reduce using rule 11 (command -> struct_while .)
    DUALCOLON       reduce using rule 11 (command -> struct_while .)
    WHILE           reduce using rule 11 (command -> struct_while .)
    REPEAT          reduce using rule 11 (command -> struct_while .)
    IF              reduce using rule 11 (command -> struct_while .)
    FOR             reduce using rule 11 (command -> struct_while .)
    RETURN          reduce using rule 11 (command -> struct_while .)
    NAME            reduce using rule 11 (command -> struct_while .)
    $end            reduce using rule 11 (command -> struct_while .)
    END             reduce using rule 11 (command -> struct_while .)
    UNTIL           reduce using rule 11 (command -> struct_while .)
    ELSE            reduce using rule 11 (command -> struct_while .)
    ELSEIF          reduce using rule 11 (command -> struct_while .)


state 12

    (12) command -> struct_repeat .

    BREAK           reduce using rule 12 (command -> struct_repeat .)
    DO              reduce using rule 12 (command -> struct_repeat .)
    LOCAL           reduce using rule 12 (command -> struct_repeat .)
    DUALCOLON       reduce using rule 12 (command -> struct_repeat .)
    WHILE           reduce using rule 12 (command -> struct_repeat .)
    REPEAT          reduce using rule 12 (command -> struct_repeat .)
    IF              reduce using rule 12 (command -> struct_repeat .)
    FOR             reduce using rule 12 (command -> struct_repeat .)
    RETURN          reduce using rule 12 (command -> struct_repeat .)
    NAME            reduce using rule 12 (command -> struct_repeat .)
    $end            reduce using rule 12 (command -> struct_repeat .)
    END             reduce using rule 12 (command -> struct_repeat .)
    UNTIL           reduce using rule 12 (command -> struct_repeat .)
    ELSE            reduce using rule 12 (command -> struct_repeat .)
    ELSEIF          reduce using rule 12 (command -> struct_repeat .)


state 13

    (13) command -> if .

    BREAK           reduce using rule 13 (command -> if .)
    DO              reduce using rule 13 (command -> if .)
    LOCAL           reduce using rule 13 (command -> if .)
    DUALCOLON       reduce using rule 13 (command -> if .)
    WHILE           reduce using rule 13 (command -> if .)
    REPEAT          reduce using rule 13 (command -> if .)
    IF              reduce using rule 13 (command -> if .)
    FOR             reduce using rule 13 (command -> if .)
    RETURN          reduce using rule 13 (command -> if .)
    NAME            reduce using rule 13 (command -> if .)
    $end            reduce using rule 13 (command -> if .)
    END             reduce using rule 13 (command -> if .)
    UNTIL           reduce using rule 13 (command -> if .)
    ELSE            reduce using rule 13 (command -> if .)
    ELSEIF          reduce using rule 13 (command -> if .)


state 14

    (14) command -> struct_for .

    BREAK           reduce using rule 14 (command -> struct_for .)
    DO              reduce using rule 14 (command -> struct_for .)
    LOCAL           reduce using rule 14 (command -> struct_for .)
    DUALCOLON       reduce using rule 14 (command -> struct_for .)
    WHILE           reduce using rule 14 (command -> struct_for .)
    REPEAT          reduce using rule 14 (command -> struct_for .)
    IF              reduce using rule 14 (command -> struct_for .)
    FOR             reduce using rule 14 (command -> struct_for .)
    RETURN          reduce using rule 14 (command -> struct_for .)
    NAME            reduce using rule 14 (command -> struct_for .)
    $end            reduce using rule 14 (command -> struct_for .)
    END             reduce using rule 14 (command -> struct_for .)
    UNTIL           reduce using rule 14 (command -> struct_for .)
    ELSE            reduce using rule 14 (command -> struct_for .)
    ELSEIF          reduce using rule 14 (command -> struct_for .)


state 15

    (15) command -> struct_for_in .

    BREAK           reduce using rule 15 (command -> struct_for_in .)
    DO              reduce using rule 15 (command -> struct_for_in .)
    LOCAL           reduce using rule 15 (command -> struct_for_in .)
    DUALCOLON       reduce using rule 15 (command -> struct_for_in .)
    WHILE           reduce using rule 15 (command -> struct_for_in .)
    REPEAT          reduce using rule 15 (command -> struct_for_in .)
    IF              reduce using rule 15 (command -> struct_for_in .)
    FOR             reduce using rule 15 (command -> struct_for_in .)
    RETURN          reduce using rule 15 (command -> struct_for_in .)
    NAME            reduce using rule 15 (command -> struct_for_in .)
    $end            reduce using rule 15 (command -> struct_for_in .)
    END             reduce using rule 15 (command -> struct_for_in .)
    UNTIL           reduce using rule 15 (command -> struct_for_in .)
    ELSE            reduce using rule 15 (command -> struct_for_in .)
    ELSEIF          reduce using rule 15 (command -> struct_for_in .)


state 16

    (16) command -> LOCAL . list_vars ATRIB list_exps
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function
    (60) call_function -> . prefix_exp args

    NAME            shift and go to state 21

    list_vars                      shift and go to state 33
    var                            shift and go to state 18
    prefix_exp                     shift and go to state 34
    call_function                  shift and go to state 35

state 17

    (17) command -> command_ret .

    BREAK           reduce using rule 17 (command -> command_ret .)
    DO              reduce using rule 17 (command -> command_ret .)
    LOCAL           reduce using rule 17 (command -> command_ret .)
    DUALCOLON       reduce using rule 17 (command -> command_ret .)
    WHILE           reduce using rule 17 (command -> command_ret .)
    REPEAT          reduce using rule 17 (command -> command_ret .)
    IF              reduce using rule 17 (command -> command_ret .)
    FOR             reduce using rule 17 (command -> command_ret .)
    RETURN          reduce using rule 17 (command -> command_ret .)
    NAME            reduce using rule 17 (command -> command_ret .)
    $end            reduce using rule 17 (command -> command_ret .)
    END             reduce using rule 17 (command -> command_ret .)
    UNTIL           reduce using rule 17 (command -> command_ret .)
    ELSE            reduce using rule 17 (command -> command_ret .)
    ELSEIF          reduce using rule 17 (command -> command_ret .)


state 18

    (24) list_vars -> var .
    (25) list_vars -> var . COMMA list_vars
    (28) prefix_exp -> var .

    ATRIB           reduce using rule 24 (list_vars -> var .)
    COMMA           shift and go to state 36
    LCOLCH          reduce using rule 28 (prefix_exp -> var .)
    LPAREN          reduce using rule 28 (prefix_exp -> var .)


state 19

    (60) call_function -> prefix_exp . args
    (27) var -> prefix_exp . LCOLCH exp RCOLCH
    (61) args -> . LPAREN list_exps RPAREN
    (62) args -> . LPAREN RPAREN

    LCOLCH          shift and go to state 38
    LPAREN          shift and go to state 39

    args                           shift and go to state 37

state 20

    (21) rotulo -> DUALCOLON . NAME DUALCOLON

    NAME            shift and go to state 40


state 21

    (26) var -> NAME .

    COMMA           reduce using rule 26 (var -> NAME .)
    ATRIB           reduce using rule 26 (var -> NAME .)
    LCOLCH          reduce using rule 26 (var -> NAME .)
    LPAREN          reduce using rule 26 (var -> NAME .)
    DO              reduce using rule 26 (var -> NAME .)
    PLUS            reduce using rule 26 (var -> NAME .)
    MINUS           reduce using rule 26 (var -> NAME .)
    TIMES           reduce using rule 26 (var -> NAME .)
    DIVIDE          reduce using rule 26 (var -> NAME .)
    EXPO            reduce using rule 26 (var -> NAME .)
    PERCENTUAL      reduce using rule 26 (var -> NAME .)
    CONCAT          reduce using rule 26 (var -> NAME .)
    LT              reduce using rule 26 (var -> NAME .)
    LTEQUALS        reduce using rule 26 (var -> NAME .)
    GT              reduce using rule 26 (var -> NAME .)
    GTEQUALS        reduce using rule 26 (var -> NAME .)
    EQUALS          reduce using rule 26 (var -> NAME .)
    DIF             reduce using rule 26 (var -> NAME .)
    AND             reduce using rule 26 (var -> NAME .)
    OR              reduce using rule 26 (var -> NAME .)
    THEN            reduce using rule 26 (var -> NAME .)
    SEMICOLON       reduce using rule 26 (var -> NAME .)
    BREAK           reduce using rule 26 (var -> NAME .)
    LOCAL           reduce using rule 26 (var -> NAME .)
    DUALCOLON       reduce using rule 26 (var -> NAME .)
    WHILE           reduce using rule 26 (var -> NAME .)
    REPEAT          reduce using rule 26 (var -> NAME .)
    IF              reduce using rule 26 (var -> NAME .)
    FOR             reduce using rule 26 (var -> NAME .)
    RETURN          reduce using rule 26 (var -> NAME .)
    NAME            reduce using rule 26 (var -> NAME .)
    $end            reduce using rule 26 (var -> NAME .)
    END             reduce using rule 26 (var -> NAME .)
    UNTIL           reduce using rule 26 (var -> NAME .)
    ELSE            reduce using rule 26 (var -> NAME .)
    ELSEIF          reduce using rule 26 (var -> NAME .)
    RCOLCH          reduce using rule 26 (var -> NAME .)
    RPAREN          reduce using rule 26 (var -> NAME .)


state 22

    (75) struct_while -> WHILE . exp DO block END
    (34) exp -> . NIL
    (35) exp -> . FALSE
    (36) exp -> . TRUE
    (37) exp -> . NUMBER
    (38) exp -> . STRING
    (39) exp -> . VARARGS
    (40) exp -> . def_function
    (41) exp -> . prefix_exp
    (42) exp -> . TAG exp
    (43) exp -> . MINUS exp
    (44) exp -> . NOT exp
    (45) exp -> . exp PLUS exp
    (46) exp -> . exp MINUS exp
    (47) exp -> . exp TIMES exp
    (48) exp -> . exp DIVIDE exp
    (49) exp -> . exp EXPO exp
    (50) exp -> . exp PERCENTUAL exp
    (51) exp -> . exp CONCAT exp
    (52) exp -> . exp LT exp
    (53) exp -> . exp LTEQUALS exp
    (54) exp -> . exp GT exp
    (55) exp -> . exp GTEQUALS exp
    (56) exp -> . exp EQUALS exp
    (57) exp -> . exp DIF exp
    (58) exp -> . exp AND exp
    (59) exp -> . exp OR exp
    (63) def_function -> . function
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function
    (68) function -> . FUNCTION name_function body_function
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (60) call_function -> . prefix_exp args

    NIL             shift and go to state 42
    FALSE           shift and go to state 43
    TRUE            shift and go to state 44
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    VARARGS         shift and go to state 47
    TAG             shift and go to state 50
    MINUS           shift and go to state 51
    NOT             shift and go to state 52
    FUNCTION        shift and go to state 5
    NAME            shift and go to state 21

    exp                            shift and go to state 41
    def_function                   shift and go to state 48
    prefix_exp                     shift and go to state 49
    function                       shift and go to state 53
    var                            shift and go to state 54
    call_function                  shift and go to state 35

state 23

    (79) struct_repeat -> REPEAT . block UNTIL exp
    (4) block -> . command
    (5) block -> . command block
    (6) command -> . list_vars ATRIB list_exps
    (7) command -> . call_function
    (8) command -> . rotulo
    (9) command -> . BREAK
    (10) command -> . DO block END
    (11) command -> . struct_while
    (12) command -> . struct_repeat
    (13) command -> . if
    (14) command -> . struct_for
    (15) command -> . struct_for_in
    (16) command -> . LOCAL list_vars ATRIB list_exps
    (17) command -> . command_ret
    (24) list_vars -> . var
    (25) list_vars -> . var COMMA list_vars
    (60) call_function -> . prefix_exp args
    (21) rotulo -> . DUALCOLON NAME DUALCOLON
    (75) struct_while -> . WHILE exp DO block END
    (79) struct_repeat -> . REPEAT block UNTIL exp
    (69) if -> . IF exp THEN block END
    (70) if -> . IF exp THEN block else1
    (71) if -> . IF exp THEN block else_if else1
    (76) struct_for -> . FOR NAME ATRIB exp COMMA exp DO block END
    (77) struct_for -> . FOR NAME ATRIB exp COMMA exp COMMA exp DO block END
    (78) struct_for_in -> . FOR list_names IN list_exps DO block END
    (18) command_ret -> . RETURN SEMICOLON
    (19) command_ret -> . RETURN list_exps
    (20) command_ret -> . RETURN list_exps SEMICOLON
    (26) var -> . NAME
    (27) var -> . prefix_exp LCOLCH exp RCOLCH
    (28) prefix_exp -> . var
    (29) prefix_exp -> . call_function

    BREAK           shift and go to state 9
    DO              shift and go to state 10
    LOCAL           shift and go to state 16
    DUALCOLON       shift and go to state 20
    WHILE           shift and go to state 22
    REPEAT          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    RETURN          shift and go to state 26
    NAME            shift and go to state 21

    block                          shift and go to state 55
    command                        shift and go to state 4
    list_vars                      shift and go to state 6
    call_function                  shift and go to state 7
    rotulo                         shift and go to state 8
    struct_while                   shift and go to state 11
    struct_repeat                  shift and go to state 12
    if                             shift and go to state 13
    struct_for                     shift and go to state 14
    struct_for_in                  shift and go to state 15
    command_ret                    shift and go to state 17
    var                            shift and go to state 18
    prefix_exp                     shift and go to state 19

state 24
